[gd_scene load_steps=6 format=3 uid="uid://dosbbm6uk86ho"]

[ext_resource type="Script" path="res://src/ui/game_ui/game_ui.gd" id="1_3fup7"]
[ext_resource type="PackedScene" uid="uid://byj1y3wrwtdtq" path="res://src/ui/pause_ui/PauseUI.tscn" id="1_corso"]
[ext_resource type="Texture2D" uid="uid://dpavnihuqkb5j" path="res://addons/kenney_fantasy_ui_border/Border/panel-border-025.png" id="2_ch8ic"]
[ext_resource type="Texture2D" uid="uid://b31ocqv2k70ck" path="res://addons/kenney_fantasy_ui_border/Border/panel-border-026.png" id="3_cncst"]
[ext_resource type="Texture2D" uid="uid://bvhed0lxktwe0" path="res://assets/sprite/placeholder/circle.png" id="3_nx313"]

[node name="GameUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fup7")

[node name="VictoryScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 256.0
offset_right = -320.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.292407, 0.52549, 0.0201099, 0.870588)

[node name="Title" type="Label" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 8.0
offset_right = 130.0
offset_bottom = 63.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 40
text = "LEVEL CLEARED"
horizontal_alignment = 1

[node name="LevelStatistics" type="Label" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -72.0
offset_right = 256.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Statistics:
Time: {0}
Faes lost: {1}"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -171.0
offset_top = -64.0
offset_right = 171.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="RetryButton" type="Button" parent="VictoryScreen/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="TitleButton" type="Button" parent="VictoryScreen/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Title screen"

[node name="NextButton" type="Button" parent="VictoryScreen/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Next level"

[node name="NinePatchRect" type="NinePatchRect" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ch8ic")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="GameOverScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 256.0
offset_right = -320.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.411765, 0.0866203, 0.0155488, 0.788235)

[node name="Title" type="Label" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 8.0
offset_right = 130.0
offset_bottom = 63.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 40
text = "It's faeover..."
horizontal_alignment = 1

[node name="LevelStatistics" type="Label" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -72.0
offset_right = 256.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Statistics:
Time: {0}
Faes lost: {1}"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -171.0
offset_top = -64.0
offset_right = 171.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="RetryButton" type="Button" parent="GameOverScreen/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="TitleButton" type="Button" parent="GameOverScreen/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Title screen"

[node name="NinePatchRect" type="NinePatchRect" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_cncst")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="PauseUI" parent="." instance=ExtResource("1_corso")]
visible = false
layout_mode = 1

[node name="UIDecoration" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 0.403922)
layout_mode = 0
offset_left = -151.0
offset_top = -112.0
offset_right = 476.0
offset_bottom = 146.0
rotation = -0.08328
texture = ExtResource("3_nx313")

[node name="SwarmAgentCount" type="Label" parent="."]
layout_mode = 1
offset_left = 1.0
offset_top = 45.0
offset_right = 365.0
offset_bottom = 117.0
rotation = -0.114845
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 40
text = "Wisps remaining: 10"

[connection signal="pressed" from="VictoryScreen/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VictoryScreen/HBoxContainer/TitleButton" to="." method="_on_title_button_pressed"]
[connection signal="pressed" from="VictoryScreen/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="GameOverScreen/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOverScreen/HBoxContainer/TitleButton" to="." method="_on_title_button_pressed"]
